# Neural-Net-Library

./: .gitignore  CMakeLists.txt  datareformat.py  main.cpp  neuralnet.cpp  outData.csv  readme.md
neuralnet/: neuralnet.cpp  neuralnet.hpp
